@@ -31,6 +31,9 @@ Imager-File-JPEG 0.96
  - add support for producing JPEG restart markers (like cjpeg -restart
    N), using the jpeg_restart tag.
 
+ - add control over subsample for JPEG (like the cjpeg -sample
+   parameter) using the jpeg_sample tag
+
 Imager-File-JPEG 0.95
 =====================
 
